# CppTestFrameworks

./: CMakeLists.txt  README.md
BoostTest/: CMakeLists.txt  README.md  fixtures_basic.cpp  handle_exceptions.cpp  main.cpp  messages.cpp  warnings.cpp
Catch2Tests/: CMakeLists.txt  asserts.cpp  factorial_tests.cpp  main.cpp  matchers.cpp  test_controller.h  test_sections_1.cpp
GoogleBenchmark/: CMakeLists.txt  main.cpp
GoogleMock/: CMakeLists.txt  main.cpp
GoogleMock_UserService/: CMakeLists.txt
GoogleMock_UserService/src/: CMakeLists.txt  Database.cpp  Database.hpp  IDatabase.hpp  IService.hpp  User.hpp  UserService.cpp  UserService.hpp
GoogleMock_UserService/test/: CMakeLists.txt  fixtures.cpp  test_main.cpp
GoogleMock_UserServiceSimple/: CMakeLists.txt
GoogleMock_UserServiceSimple/src/: CMakeLists.txt  user_repository.hpp  user_service.cpp  user_service.hpp
GoogleMock_UserServiceSimple/test/: CMakeLists.txt  test_main.cpp
GoogleTests/: CMakeLists.txt  README
GoogleTests/src/: Utils.cpp  Utils.h  Utils2.cpp  Utils2.h  main.cpp
GoogleTests/tests/: CMakeLists.txt  ParametrizedTests.cpp  fixtures.cpp  main.cpp  tests2.cpp
TestCoverage/: CMakeLists.txt  main.cpp
